<resources>
    <string name="app_name">Button Game</string>

    <!--    FOR USER CREATION DIALOG   -->
    <string name="username_dialog_hint">Username</string>
    <string name="username_dialog_submit">Submit</string>
    <string name="username_dialog_help_text">To be able to play online, you have to have a username.\nA valid username contains: \n - 3 to 15 characters \n - no special characters</string>
    <string name="username_dialog_textview_text">Please, enter a valid username:</string>
    <string name="username_dialog_title_text">No username detected!</string>
    <string name="username_error_text_fail_regex">given name contains invalid characters</string>
    <string name="username_error_text_name_taken">given name already in use!</string>
    <string name="username_error_text_name_length">name must be between 3 and 15 characters long!</string>

    <!--    FOR MAIN SELECTION FRAGMENT    -->
    <string name="main_frag_join_game_button">Join a game</string>
    <string name="main_frag_settings">About</string>
    <string name="main_title_text">the button game</string>

    <!--    FOR LOBBY FRAGMENT       -->
    <string name="lobby_fragment_list_title">join a game.</string>
    <string name="lobby_card_join_button">JOIN</string>
    <string name="lobby_card_room_title">room #%1$s</string>
    <string name="lobby_card_room_occupants">%1$s/10</string>
    <string name="lobby_card_room_current_score">ongoing click: %1$s</string>


    <!--    FOR GAME OVER DIALOG     -->
    <string name="game_over_title_text">GAME OVER!</string>
    <string name="game_over_detail_text">Sorry, you have no more clicks left in ya.\nWant to try again, or exit to lobby?</string>
    <string name="game_over_try_again_button">TRY AGAIN</string>
    <string name="game_over_exit_button">EXIT</string>

    <!--    FOR GAME ACTIVITY       -->
    <string name="game_click_button">+1</string>
    <string name="game_end_turn_button">End Turn</string>

    <!--    FOR ERROR DIALOG        -->
    <string name="error_dialog_button">RETURN</string>
    <string name="error_dialog_title">Error!</string>


    <!--    FOR ABOUT FRAGMENT      -->
    <string name="about_page_text">Name: Elias Koivula\nSkills:\n - Scala\n - JavaScript\n - Python\n - C/C#/C++\n - Kotlin\n - Swift</string>
</resources>
