<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/UserCreationDialogTheme">

    <TextView
        android:id="@+id/game_over_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15dp"
        android:background="#00FFFFFF"
        android:gravity="center"
        android:text="@string/game_over_title_text"
        android:textSize="30sp"
        android:fontFamily="@font/jaapokki_family"
        style="@style/TextOutlineStyle"/>

    <TextView
        android:id="@+id/game_over_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="35dp"
        android:gravity="center"
        android:background="#00FFFFFF"
        android:textSize="22sp"
        android:text="@string/game_over_detail_text"
        android:fontFamily="@font/jaapokki_family"
        style="@style/TextOutlineStyle"/>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        android:layout_marginBottom="15dp">


        <Button
            android:id="@+id/game_over_exit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/game_over_exit_button"
            android:textSize="16sp"
            android:textAlignment="center"
            android:layout_marginStart="15dp"
            android:layout_gravity="start"
            android:fontFamily="@font/jaapokki_family"
            android:background="@color/colorSecondaryLighter"
            style="@style/TextOutlineStyle"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"/>


        <Button
            android:id="@+id/game_over_try_again_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textAlignment="center"
            android:layout_marginEnd="15dp"
            android:textSize="16sp"
            android:text="@string/game_over_try_again_button"
            android:layout_gravity="end"
            android:fontFamily="@font/jaapokki_family"
            android:background="@color/colorSecondaryLighter"
            style="@style/TextOutlineStyle"
            android:paddingEnd="10dp"
            android:paddingStart="10dp"
            android:paddingBottom="5dp"/>

    </RelativeLayout>
</LinearLayout>