<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/UserCreationDialogTheme">

    <TextView
        android:id="@+id/username_dialog_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="15dp"
        android:textStyle="bold"
        android:text="@string/username_dialog_title_text"
        android:textSize="26sp"
        android:fontFamily="@font/jaapokki_family"
        style="@style/TextOutlineStyle"/>

    <TextView
        android:id="@+id/username_dialog_help_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="italic"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="50dp"
        android:text="@string/username_dialog_help_text"
        android:textSize="18sp"
        android:fontFamily="@font/jaapokki_family"
        style="@style/TextOutlineStyle"/>

    <TextView
        android:id="@+id/username_dialog_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="20dp"
        android:text="@string/username_dialog_textview_text"
        android:textSize="20sp"
        android:fontFamily="@font/jaapokki_family"
        style="@style/TextOutlineStyle"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/username_dialog_edittext"
            android:layout_width="200sp"
            android:layout_height="40sp"
            android:theme="@style/DialogEditTextStyle"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="36dp"
            android:hint="@string/username_dialog_hint"
            android:inputType="textPersonName"
            android:maxLength="15"
            android:maxLines="1"
            android:textColor="@color/colorDarkText"
            android:textColorHint="@color/colorHintTextGray"/>
        <ProgressBar
            android:id="@+id/username_dialog_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_dialog_edittext"
            android:layout_toEndOf="@id/username_dialog_edittext"
            android:indeterminate="true" />

        <ImageView
            android:id="@+id/correct_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_dialog_edittext"
            android:layout_toEndOf="@id/username_dialog_edittext"

            app:srcCompat="@drawable/avd_incorrect_animation" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="75dp">


        <TextView
            android:id="@+id/username_dialog_error_text"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="italic"
            android:textColor="@color/colorError"
            android:layout_marginLeft="20dp"
            android:text=""
            android:fontFamily="@font/jaapokki_family"
            style="@style/TextOutlineStyle"
            />

        <Button
            android:id="@+id/dialog_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorSecondaryLighter"
            android:layout_gravity="end"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/username_dialog_error_text"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="20dp"
            android:text="@string/username_dialog_submit"
            android:fontFamily="@font/jaapokki_family"
            style="@style/TextOutlineStyle"/>
    </RelativeLayout>

</LinearLayout>