<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/UserCreationDialogTheme">

    <TextView
        android:id="@+id/username_dialog_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="32dp"
        android:text="@string/username_dialog_textview_text"
        android:textColor="@color/colorDarkText"
        android:textSize="28sp" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/username_dialog_edittext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/username_dialog_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorDarkText" />
        <ProgressBar
            android:id="@+id/username_dialog_progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_dialog_edittext"
            android:layout_alignEnd="@+id/username_dialog_edittext"
            android:indeterminate="true" />

        <ImageView
            android:id="@+id/correct_anim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/username_dialog_edittext"
            android:layout_alignEnd="@+id/username_dialog_edittext"
            app:srcCompat="@drawable/avd_incorrect_animation" />

    </RelativeLayout>

    <Button
        android:id="@+id/dialog_submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/username_dialog_submit" />
</LinearLayout>